--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,12 +7,12 @@ phases:
       - yum install -y wget unzip  # wgetとunzipをインストール
       - echo Downloading ChromeDriver...
       - wget https://chromedriver.storage.googleapis.com/2.46/chromedriver_linux64.zip  # ChromeDriverをダウンロード
-      - unzip chromedriver_linux64.zip -d /usr/local/bin/  # 解凍して適切な場所に配置
+      - unzip chromedriver_linux64.zip -d /usr/local/bin/  # ChromeDriverを解凍
       - chmod +x /usr/local/bin/chromedriver  # 実行権限を追加
       - echo Downloading Chromium...
       - wget https://download-chromium.appspot.com/dl/Linux_x64?type=snapshots -O chromium.zip  # Chromiumをダウンロード
-      - unzip chromium.zip -d /usr/local/bin/chromium  # 解凍先を指定
-      - chmod +x /usr/local/bin/chromium/chrome  # 正しいバイナリに実行権限を追加
+      - unzip chromium.zip -d /usr/local/bin/chrome-linux  # 解凍先を指定
+      - chmod +x /usr/local/bin/chrome-linux/chrome  # 正しいバイナリに実行権限を追加
       - pip install -r requirements.txt  # Pythonの依存関係をインストール
   pre_build:
     commands:
