--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,9 +16,9 @@ phases:
       - python -m unittest discover tests/  # テストを実行
       - end_time=$(date +%s)  # テスト終了時間を記録
       - duration=$((end_time - start_time))  # 実行時間を計算
-      - echo "Test execution time: $duration seconds" > test_duration.txt  # 実行時間をファイルに保存
+      - echo Test execution time "$duration seconds" > test_duration.txt  # 実行時間をtest_duration.txtに保存
       - echo Uploading duration to S3...
-      - aws s3 cp test_duration.txt s3://cicd-kiki-bucket/test_duration.txt  # S3にアップ
+      - aws s3 cp test_duration.txt s3://cicd-kiki-bucket/test_duration.txt  # S3にアップロード
   post_build:
     commands:
       - echo Tests completed
